[gd_scene load_steps=7 format=3 uid="uid://30kmdsbphw3t"]

[ext_resource type="Script" path="res://ui/title-screen/title_screen.gd" id="1_7jq6w"]
[ext_resource type="LabelSettings" uid="uid://bj8v41op6pha2" path="res://assets/labels/title_text.tres" id="2_72h3b"]
[ext_resource type="LabelSettings" uid="uid://dt4rc77ttb56a" path="res://assets/labels/normal_text.tres" id="3_ixufk"]
[ext_resource type="Theme" uid="uid://chmrclfq0gybd" path="res://assets/themes/default_theme.tres" id="4_sn2m3"]
[ext_resource type="PackedScene" uid="uid://hpt34cnegjrm" path="res://ui/title-screen/save_select_menu.tscn" id="5_dyupc"]
[ext_resource type="PackedScene" uid="uid://wta015slhser" path="res://ui/title-screen/quit_menu.tscn" id="5_vu38y"]

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_sn2m3")
script = ExtResource("1_7jq6w")

[node name="TODO - gameplay vid" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="Panel" parent="TODO - gameplay vid"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu Text" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="Menu Text"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Title & Caption" type="VBoxContainer" parent="Menu Text"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu Text/Title & Caption"]
layout_mode = 2
text = "TITLE GOES HERE"
label_settings = ExtResource("2_72h3b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Caption" type="Label" parent="Menu Text/Title & Caption"]
layout_mode = 2
text = "Caption here"
label_settings = ExtResource("3_ixufk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Label" parent="Menu Text/Title & Caption"]
layout_mode = 2
text = "


"

[node name="Buttons" type="VBoxContainer" parent="Menu Text"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Play Button" type="Button" parent="Menu Text/Buttons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme = ExtResource("4_sn2m3")
text = "            PLAY            "

[node name="Settings Button" type="Button" parent="Menu Text/Buttons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme = ExtResource("4_sn2m3")
text = "SETTINGS"

[node name="Quit Menu Button" type="Button" parent="Menu Text/Buttons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme = ExtResource("4_sn2m3")
text = "QUIT"

[node name="QuitMenu PanelContainer" parent="." instance=ExtResource("5_vu38y")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.5
offset_top = -174.0
offset_right = 394.5
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveSelectMenu PanelContainer" parent="." instance=ExtResource("5_dyupc")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -825.0
offset_top = -419.0
offset_right = 825.0
offset_bottom = 419.0

[connection signal="pressed" from="Menu Text/Buttons/Play Button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu Text/Buttons/Settings Button" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu Text/Buttons/Quit Menu Button" to="." method="_on_quit_pressed"]
